[package]
name = "botho-fuzz"
version = "0.0.0"
authors = ["Botho Foundation"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

# Fuzz crate must be in its own workspace to resolve git dependencies correctly
[workspace]

# Required git patches (same as parent workspace)
[patch.crates-io]
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "9abfdc054d9ba65f1e185ea1e6eff3947ce879dc" }
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "049bf9d30f3bbe072e2ad1b5eefdf0f3c851215e" }

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

# Target crates
botho = { path = "../botho" }
bth-account-keys = { path = "../account-keys", features = ["pq"] }
bth-crypto-pq = { path = "../crypto/pq" }
bth-crypto-keys = { path = "../crypto/keys" }
bth-crypto-ring-signature = { path = "../crypto/ring-signature", features = ["alloc"] }
bth-crypto-hashes = { path = "../crypto/hashes" }
bth-transaction-core = { path = "../transaction/core", features = ["pq"] }
bth-util-from-random = { path = "../util/from-random" }
bth-util-repr-bytes = { path = "../util/repr-bytes" }
bth-cluster-tax = { path = "../cluster-tax" }
bth-bridge-core = { path = "../bridge/core" }

# Serialization
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
bs58 = "0.5"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rand_chacha = "0.3"
subtle = "2"
curve25519-dalek = "4"
tempfile = "3"

[[bin]]
name = "fuzz_transaction"
path = "fuzz_targets/fuzz_transaction.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pq_transaction"
path = "fuzz_targets/fuzz_pq_transaction.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_block"
path = "fuzz_targets/fuzz_block.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pq_keys"
path = "fuzz_targets/fuzz_pq_keys.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_network_messages"
path = "fuzz_targets/fuzz_network_messages.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ring_signature"
path = "fuzz_targets/fuzz_ring_signature.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rpc_request"
path = "fuzz_targets/fuzz_rpc_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_address_parsing"
path = "fuzz_targets/fuzz_address_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_mlkem_decapsulation"
path = "fuzz_targets/fuzz_mlkem_decapsulation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_clsag"
path = "fuzz_targets/fuzz_clsag.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_subaddress"
path = "fuzz_targets/fuzz_subaddress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_add_block"
path = "fuzz_targets/fuzz_add_block.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_multi_input_balance"
path = "fuzz_targets/fuzz_multi_input_balance.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lottery_validation"
path = "fuzz_targets/fuzz_lottery_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_cluster_tax_math"
path = "fuzz_targets/fuzz_cluster_tax_math.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_bridge_attestation"
path = "fuzz_targets/fuzz_bridge_attestation.rs"
test = false
doc = false
bench = false
