[package]
name = "botho-fuzz"
version = "0.0.0"
authors = ["Botho Foundation"]
edition = "2021"
publish = false

# ============================================================================
# Toolchain watch (#920)
# ============================================================================
# This crate is pinned, via the repo-root `rust-toolchain`, to
# `nightly-2025-12-03`. Do NOT bump that pin casually: a replacement nightly
# must satisfy BOTH of these constraints, or `cargo fuzz` breaks somewhere:
#
#   1. Its rustc must still COMPILE the pinned dep tree. Rolling nightlies past
#      ~2026-06 fail to build the transitive `hashbrown 0.14.5`
#      ("cannot specialize on trait Copy"); a bump likely needs coordinated dep
#      updates (e.g. hashbrown) and a fresh `fuzz/Cargo.lock`.
#   2. Its shipped AddressSanitizer runtime must not DEADLOCK on the local dyld.
#      The 2025-12-03 ASan runtime hangs in `__asan::InitializeShadowMemory`
#      before `main` on macOS 26.5 (arm64) — the root cause of #920. A bump that
#      fixes (1) but not (2) still leaves macOS devs unable to `cargo fuzz run`.
#
# Until a nightly satisfies both, macOS developers use the native-smoke path
# (the `native-smoke` feature + `native_smoke` bin below); coverage-guided runs
# happen in ubuntu CI (`.github/workflows/fuzz.yml`). See `fuzz/README.md`.

[package.metadata]
cargo-fuzz = true

# The shared fuzz-harness bodies (#920). Both the `fuzz_targets/*` libFuzzer
# binaries and the native-smoke driver import these, so a harness change can
# never drift between the coverage-guided path and the macOS smoke path.
[lib]
path = "src/lib.rs"
test = true
doc = false
bench = false

[features]
# Enables the `native_smoke` binary (a plain, sanitizer-free driver that runs
# the shared harnesses over the corpus + randomized inputs on macOS, where
# libFuzzer/ASan deadlocks — #920). Off by default so a normal `cargo build`
# of this crate does not pull the driver in.
native-smoke = []

# Fuzz crate must be in its own workspace to resolve git dependencies correctly
[workspace]

# Required git patches (same as parent workspace)
[patch.crates-io]
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "9abfdc054d9ba65f1e185ea1e6eff3947ce879dc" }
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "049bf9d30f3bbe072e2ad1b5eefdf0f3c851215e" }

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

# Target crates
botho = { path = "../botho" }
bth-account-keys = { path = "../account-keys", features = ["pq"] }
bth-crypto-pq = { path = "../crypto/pq" }
bth-crypto-keys = { path = "../crypto/keys" }
bth-crypto-ring-signature = { path = "../crypto/ring-signature", features = ["alloc"] }
bth-crypto-hashes = { path = "../crypto/hashes" }
bth-transaction-core = { path = "../transaction/core" }
bth-util-from-random = { path = "../util/from-random" }
bth-util-repr-bytes = { path = "../util/repr-bytes" }
bth-cluster-tax = { path = "../cluster-tax" }
bth-bridge-core = { path = "../bridge/core" }
# Tier B bridge parsers (#897): the service's [lib] target exposes ONLY the
# pure byte parsers (see bridge/service/src/lib.rs).
bth-bridge-service = { path = "../bridge/service" }

# Serialization
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
bs58 = "0.5"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rand_chacha = "0.3"
subtle = "2"
curve25519-dalek = "4"
tempfile = "3"

# Native-smoke driver (#920): NOT a libFuzzer target. Runs the shared harness
# bodies over corpus + randomized inputs on a stock toolchain (no libFuzzer,
# no sanitizer) so it works on macOS. Gated behind the `native-smoke` feature.
[[bin]]
name = "native_smoke"
path = "bin/native_smoke.rs"
required-features = ["native-smoke"]
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_transaction"
path = "fuzz_targets/fuzz_transaction.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_block"
path = "fuzz_targets/fuzz_block.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pq_keys"
path = "fuzz_targets/fuzz_pq_keys.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_network_messages"
path = "fuzz_targets/fuzz_network_messages.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ring_signature"
path = "fuzz_targets/fuzz_ring_signature.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rpc_request"
path = "fuzz_targets/fuzz_rpc_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_address_parsing"
path = "fuzz_targets/fuzz_address_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_mlkem_decapsulation"
path = "fuzz_targets/fuzz_mlkem_decapsulation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_clsag"
path = "fuzz_targets/fuzz_clsag.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_subaddress"
path = "fuzz_targets/fuzz_subaddress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_add_block"
path = "fuzz_targets/fuzz_add_block.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_multi_input_balance"
path = "fuzz_targets/fuzz_multi_input_balance.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lottery_validation"
path = "fuzz_targets/fuzz_lottery_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_cluster_tax_math"
path = "fuzz_targets/fuzz_cluster_tax_math.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_bridge_attestation"
path = "fuzz_targets/fuzz_bridge_attestation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_bridge_solana_parse"
path = "fuzz_targets/fuzz_bridge_solana_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_bridge_ethereum_parse"
path = "fuzz_targets/fuzz_bridge_ethereum_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_federation_status_line"
path = "fuzz_targets/fuzz_federation_status_line.rs"
test = false
doc = false
bench = false
