[package]
name = "bth-gossip"
version = "0.1.0"
authors = ["Botho Foundation"]
edition = "2021"
license = "Apache-2.0"
rust-version = { workspace = true }
description = "Gossip-based peer discovery and topology sharing for Botho"

[dependencies]
# Workspace dependencies
bth-common = { workspace = true, features = ["std"] }
bth-consensus-scp-types = { workspace = true }
bth-crypto-keys = { workspace = true }
bth-util-serial = { workspace = true }

# External dependencies
bitflags = { workspace = true, features = ["serde"] }
getrandom = "0.2"
displaydoc = { workspace = true }
futures = { workspace = true }
hex = { workspace = true, features = ["serde"] }
libp2p = { workspace = true, features = [
    "tokio",
    "gossipsub",
    "kad",
    "identify",
    "request-response",
    "noise",
    "tcp",
    "yamux",
    "macros",
    "ed25519",
    "cbor",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dev-dependencies]
bth-util-from-random = { workspace = true }
tokio-test = "0.4"
rand = { workspace = true }

[features]
default = []
