[package]
name = "mc-mobilecoind-dev-faucet"
version = "7.1.0"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[[bin]]
name = "mobilecoind-dev-faucet"
path = "src/bin/main.rs"

[dependencies]
mc-account-keys = { workspace = true }
mc-api = { workspace = true }
mc-common = { workspace = true, features = ["loggers"] }
mc-connection = { workspace = true }
mc-crypto-ring-signature-signer = { workspace = true }
mc-mobilecoind-api = { workspace = true }
mc-transaction-builder = { workspace = true }
mc-transaction-core = { workspace = true }
mc-util-grpc = { workspace = true }
mc-util-keyfile = { workspace = true }
mc-util-serial = { workspace = true, features = ["std"] }
mc-util-uri = { workspace = true }

async-channel = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
displaydoc = { workspace = true }
grpcio = { workspace = true, features = ["prost-codec"] }
hex = { workspace = true }
rand = { workspace = true }
rocket = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
