[package]
name = "mc-mobilecoind-json"
version = "7.1.0"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[[bin]]
name = "mobilecoind-json"
path = "src/bin/main.rs"

[dependencies]
mc-api = { workspace = true }
mc-common = { workspace = true, features = ["loggers"] }
mc-mobilecoind-api = { workspace = true }
mc-util-grpc = { workspace = true }
mc-util-serial = { workspace = true, features = ["std"] }

clap = { workspace = true, features = ["derive", "env"] }
grpcio = { workspace = true, features = ["prost-codec"] }
hex = { workspace = true }
rocket = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_derive = { workspace = true }

[dev-dependencies]
mc-crypto-keys = { workspace = true }
mc-ledger-db = { workspace = true, features = ["test_utils"] }
mc-transaction-core = { workspace = true }
mc-transaction-core-test-utils = { workspace = true }
mc-transaction-extra = { workspace = true }
mc-util-from-random = { workspace = true }

rand = { workspace = true }
