[package]
name = "mc-mobilecoind"
version = "7.1.0"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[[bin]]
name = "mobilecoind"
path = "src/bin/main.rs"

[features]
default = ["ip-check"]
ip-check = []
bypass-ip-check = []
test_utils = []

[dependencies]
mc-account-keys = { workspace = true }
mc-api = { workspace = true }
mc-attest-core = { workspace = true }
mc-blockchain-types = { workspace = true }
mc-common = { workspace = true, features = ["log"] }
mc-connection = { workspace = true }
mc-consensus-api = { workspace = true }
mc-consensus-enclave-api = { workspace = true }
mc-consensus-enclave-measurement = { workspace = true }
mc-consensus-scp = { workspace = true }
mc-core = { workspace = true, features = ["bip39"] }
mc-crypto-digestible = { workspace = true, features = ["derive"] }
mc-crypto-hashes = { workspace = true }
mc-crypto-keys = { workspace = true }
mc-crypto-ring-signature-signer = { workspace = true }
mc-fog-report-connection = { workspace = true }
mc-fog-report-resolver = { workspace = true }
mc-fog-report-validation = { workspace = true }
mc-ledger-db = { workspace = true }
mc-ledger-migration = { workspace = true }
mc-ledger-sync = { workspace = true }
mc-mobilecoind-api = { workspace = true }
mc-rand = { workspace = true }
mc-sgx-css = { workspace = true }
mc-t3-api = { workspace = true }
mc-t3-connection = { workspace = true }
mc-transaction-builder = { workspace = true }
mc-transaction-core = { workspace = true }
mc-transaction-extra = { workspace = true }
mc-util-from-random = { workspace = true }
mc-util-grpc = { workspace = true }
mc-util-lmdb = { workspace = true }
mc-util-parse = { workspace = true }
mc-util-repr-bytes = { workspace = true }
mc-util-serial = { workspace = true }
mc-util-telemetry = { workspace = true, features = ["otlp"] }
mc-util-uri = { workspace = true }
mc-watcher = { workspace = true }
mc-watcher-api = { workspace = true }

aes-gcm = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
crossbeam-channel = { workspace = true }
displaydoc = { workspace = true }
grpcio = { workspace = true, features = ["prost-codec"] }
hex_fmt = { workspace = true }
lmdb-rkv = { workspace = true }
mc-attestation-verifier = { workspace = true }
num_cpus = { workspace = true }
prost = { workspace = true, features = ["prost-derive"] }
rand = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "rustls-tls", "gzip"] }
retry = { workspace = true }
serde_json = { workspace = true }
tiny-bip39 = { workspace = true }

[build-dependencies]
# Resolves a build failure for the x86_64-apple-darwin target by overriding the grpcio libz dep, which is pinned to v1.0.25
libz-sys = { workspace = true }

[dev-dependencies]
mc-blockchain-test-utils = { workspace = true }
mc-common = { workspace = true, features = ["loggers"] }
mc-connection-test-utils = { workspace = true }
mc-fog-report-validation = { workspace = true, features = ["automock"] }
mc-fog-report-validation-test-utils = { workspace = true }
mc-util-from-random = { workspace = true }

hex = { workspace = true }
more-asserts = { workspace = true }
pem = { workspace = true }
portpicker = { workspace = true }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
tempfile = { workspace = true }
