[package]
name = "bt-peers"
version = "7.1.0"
authors = ["Botho"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[features]
test_utils = []

[dependencies]
bt-blockchain-types = { workspace = true }
bt-common = { workspace = true, features = ["log"] }
bt-connection = { workspace = true }
bt-consensus-api = { workspace = true }
bt-consensus-scp = { workspace = true }
bt-crypto-digestible = { workspace = true }
bt-crypto-keys = { workspace = true }
bt-ledger-db = { workspace = true }
bt-transaction-core = { workspace = true }
bt-util-grpc-tonic = { workspace = true }
bt-util-serial = { workspace = true }
bt-util-uri = { workspace = true }

crossbeam-channel = { workspace = true }
displaydoc = { workspace = true }
mockall = { workspace = true }
retry = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tonic = { workspace = true, features = ["codegen", "prost"] }

[dev-dependencies]
bt-connection-test-utils = { workspace = true }
bt-peers-test-utils = { workspace = true }

rand = { workspace = true }
rand_hc = { workspace = true }
