[package]
name = "bth-peers"
version = "7.1.0"
authors = ["Botho"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[features]
test_utils = []

[dependencies]
bth-blockchain-types = { workspace = true }
bth-common = { workspace = true, features = ["log"] }
bth-connection = { workspace = true }
bth-consensus-api = { workspace = true }
bth-consensus-scp = { workspace = true }
bth-crypto-digestible = { workspace = true }
bth-crypto-keys = { workspace = true }
bth-ledger-db = { workspace = true }
bth-transaction-core = { workspace = true }
bth-util-grpc-tonic = { workspace = true }
bth-util-serial = { workspace = true }
bth-util-uri = { workspace = true }

crossbeam-channel = { workspace = true }
displaydoc = { workspace = true }
mockall = { workspace = true }
retry = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tonic = { workspace = true, features = ["codegen", "prost"] }

[dev-dependencies]
bth-connection-test-utils = { workspace = true }
bth-peers-test-utils = { workspace = true }

rand = { workspace = true }
rand_hc = { workspace = true }
