[package]
name = "mc-wasm-test"
version = "7.1.0"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
rust-version = { workspace = true }

[lib]
name = "mc_wasm_test"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
# These are crates that we want to ensure build successfully for the wasm target
mc-account-keys = { workspace = true }
mc-api = { workspace = true }
mc-crypto-keys = { workspace = true }
mc-transaction-builder = { workspace = true }
mc-transaction-core = { workspace = true }

# These are required since they enable feature flags needed for wasm builds
getrandom = { workspace = true, features = ["js"] }
rand = { workspace = true, features = ["getrandom"] }

# Used for very basic testing
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
