[package]
name = "mc-watcher"
version = "7.1.0"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[[bin]]
name = "mc-watcher"
path = "src/bin/main.rs"

[[bin]]
name = "mc-watcher-db-dump"
path = "src/bin/db-dump.rs"

[dependencies]
mc-api = { workspace = true }
mc-attest-ake = { workspace = true }
mc-attest-api = { workspace = true }
mc-attest-core = { workspace = true }
mc-attest-verifier-types = { workspace = true }
mc-blockchain-types = { workspace = true }
mc-common = { workspace = true, features = ["log"] }
mc-connection = { workspace = true }
mc-crypto-digestible = { workspace = true }
mc-crypto-keys = { workspace = true }
mc-crypto-noise = { workspace = true }
mc-ledger-db = { workspace = true }
mc-ledger-sync = { workspace = true }
mc-util-from-random = { workspace = true }
mc-util-grpc = { workspace = true }
mc-util-lmdb = { workspace = true }
mc-util-metrics = { workspace = true }
mc-util-parse = { workspace = true }
mc-util-repr-bytes = { workspace = true }
mc-util-serial = { workspace = true }
mc-util-uri = { workspace = true }
mc-watcher-api = { workspace = true }

aes-gcm = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
displaydoc = { workspace = true }
futures = { workspace = true }
grpcio = { workspace = true, features = ["prost-codec"] }
hex = { workspace = true }
lazy_static = { workspace = true }
lmdb-rkv = { workspace = true }
mc-rand = { workspace = true }
prost = { workspace = true, features = ["prost-derive"] }
rayon = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"] }
sha2 = { workspace = true }
toml = { workspace = true }
url = { workspace = true }

[dev-dependencies]
mc-account-keys = { workspace = true }
mc-blockchain-test-utils = { workspace = true }
mc-common = { workspace = true, features = ["loggers"] }
mc-util-test-helper = { workspace = true }

lazy_static = { workspace = true }
rand_core = { workspace = true }
rand_hc = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
