[package]
name = "bt-watcher"
version = "7.1.0"
authors = ["Botho"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[[bin]]
name = "bt-watcher"
path = "src/bin/main.rs"

[[bin]]
name = "bt-watcher-db-dump"
path = "src/bin/db-dump.rs"

[dependencies]
bt-api = { workspace = true }
bt-blockchain-types = { workspace = true }
bt-common = { workspace = true, features = ["log"] }
bt-connection = { workspace = true }
bt-crypto-digestible = { workspace = true }
bt-crypto-keys = { workspace = true }
bt-crypto-noise = { workspace = true }
bt-ledger-db = { workspace = true }
bt-ledger-sync = { workspace = true }
bt-util-from-random = { workspace = true }
bt-util-grpc-tonic = { workspace = true }
bt-util-lmdb = { workspace = true }
bt-util-metrics = { workspace = true }
bt-util-parse = { workspace = true }
bt-util-repr-bytes = { workspace = true }
bt-util-serial = { workspace = true }
bt-util-uri = { workspace = true }
bt-watcher-api = { workspace = true }

aes-gcm = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
displaydoc = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
lazy_static = { workspace = true }
lmdb-rkv = { workspace = true }
mc-rand = { workspace = true }
prost = { workspace = true, features = ["prost-derive"] }
rayon = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"] }
sha2 = { workspace = true }
toml = { workspace = true }
url = { workspace = true }

[dev-dependencies]
bt-account-keys = { workspace = true }
bt-blockchain-test-utils = { workspace = true }
bt-common = { workspace = true, features = ["loggers"] }
bt-util-test-helper = { workspace = true }

lazy_static = { workspace = true }
rand_core = { workspace = true }
rand_hc = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
