[package]
name = "bth-watcher"
version = "7.1.0"
authors = ["Botho"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[[bin]]
name = "bth-watcher"
path = "src/bin/main.rs"

[[bin]]
name = "bth-watcher-db-dump"
path = "src/bin/db-dump.rs"

[dependencies]
bth-api = { workspace = true }
bth-blockchain-types = { workspace = true }
bth-common = { workspace = true, features = ["log"] }
bth-connection = { workspace = true }
bth-crypto-digestible = { workspace = true }
bth-crypto-keys = { workspace = true }
bth-crypto-noise = { workspace = true }
bth-ledger-db = { workspace = true }
bth-ledger-sync = { workspace = true }
bth-util-from-random = { workspace = true }
bth-util-grpc-tonic = { workspace = true }
bth-util-lmdb = { workspace = true }
bth-util-metrics = { workspace = true }
bth-util-parse = { workspace = true }
bth-util-repr-bytes = { workspace = true }
bth-util-serial = { workspace = true }
bth-util-uri = { workspace = true }
bth-watcher-api = { workspace = true }

aes-gcm = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
displaydoc = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
lazy_static = { workspace = true }
lmdb-rkv = { workspace = true }
mc-rand = { workspace = true }
prost = { workspace = true, features = ["prost-derive"] }
rayon = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"] }
sha2 = { workspace = true }
toml = { workspace = true }
url = { workspace = true }

[dev-dependencies]
bth-account-keys = { workspace = true }
bth-blockchain-test-utils = { workspace = true }
bth-common = { workspace = true, features = ["loggers"] }
bth-util-test-helper = { workspace = true }

lazy_static = { workspace = true }
rand_core = { workspace = true }
rand_hc = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
