[package]
name = "mc-attest-trusted"
version = "7.1.0"
authors = ["MobileCoin"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = { workspace = true }

[dependencies]
mc-attest-core = { workspace = true }
mc-sgx-compat = { workspace = true }
mc-sgx-types = { workspace = true }

displaydoc = { workspace = true }
prost = { workspace = true, features = ["prost-derive"] }
